Fix browser window shelf id init; re-enable browser test.

Initialize browser window shelf ids on shortcut creation.
This was only happening on page load, etc. (after shortcut creation).

Re-enable ShelfAppBrowserTest.MatchingShelfIDandActiveTab.
I'm not sure what caused/exacerbated the recent flakiness.

BUG=694941
TEST=Automated; no behavior changes.
R=jamescook@chromium.org

Review-Url: https://codereview.chromium.org/2719233002
Cr-Commit-Position: refs/heads/master@{#453469}

Former-commit-id: 8efedb10c4620871e01944c79c294be9ef04db07